# pyauth

./: .gitignore  README.md  config.yml  main.py  pyproject.toml
src/auth/: app.py  di.py
src/auth/backend/: db.py  repo.py
src/auth/frontend/: controller.py  server.py
src/auth/model/: model.py
src/mybootstrap_pyauth_itskovichanton/: actions.py  auth.py  entities.py  session_storage.py  utils.py
src/mybootstrap_pyauth_itskovichanton/backend/: auth.py  session_storage.py  user_repo.py  utils.py
src/mybootstrap_pyauth_itskovichanton/frontend/: controller.py  support.py  utils.py
tests/: app.py  config.yml  main.py  server.py
tests/backend/: db.py
