[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "equifax-reports"
version = "0.0.1"
authors = [
    { name = "Anton Itskovich", email = "a.itskovich@molbulak.com" },
]
description = "Проверки через Equifax"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
